# pull-request-report

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SETUP.md  claude_conversion_prompt.txt  config.template.json  convert_report.py  convert_to_pdf.py  pr_analysis_pdf.html  pyproject.toml  run.py
.claude/: settings.local.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
pull_request_report/: __init__.py  cli.py
scripts/: analyze.sh  check.sh  convert.sh  setup.sh  test.sh
test/: README.md  run_tests.py
test/fixtures/: sample_config.json  sample_engineering_docs.md  sample_pr_data.json  sample_summary.md
test/integration/: test_conversion_fidelity.py  test_full_workflow.py
test/unit/: test_config.py  test_conversion.py  test_pr_data.py
